--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <header>
-      <img class = 'ezlo-logo' src = 'ezlo.jpg' alt = 'ezlo logo'>
-      <h1>Usefull Links</h1>
+      <!-- <img class = 'ezlo-logo' src = 'ezlo.jpg' alt = 'ezlo logo'> -->
+      <h1>Jira Links</h1>
     </header>
     <h2>Name</h2>
     <input type = text id = 'input-name'>
