--- a/index.html
+++ b/index.html
@@ -4,24 +4,19 @@
   </head>
   <body>
     <header>
-      <!-- <img class = 'ezlo-logo' src = 'ezlo.jpg' alt = 'ezlo logo'> -->
+      <img class = 'ezlo-logo' src = 'ezlo.jpg' alt = 'ezlo logo'>
       <h1>Jira Links</h1>
     </header>
-    <h2>Name</h2>
+    <h2>Tag</h2>
     <input type = text id = 'input-name'>
     <h2>Link</h2>
     <input type = text id = 'input-link'>
     <h2></h2>
-    <button id = 'save-btn'>Save</button>
-    <button id = 'delete-btn'>Delete</button>
-    <ol id = 'link-list>'>
-      <li>Jira</li>
-        <ul id = 'jira-links'>
-        </ul>
-      <li>Otros</li>
-        <ul id = 'otros-links'>
-        </ul>
-    </ol>
+    <button id = 'save-btn'>SAVE</button>
+    <button id = 'delete-btn'>DELETE</button>
+
+    <ul id = 'link-list'>
+    </ul>
     <script src = 'main.js'></script>
   </body>
 </html>
