--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <input type = text id = 'input-link'>
     <h2></h2>
     <button id = 'save-btn'>SAVE</button>
+    <button id = 'delete-one-element-btn'>DELETE</button>
     <button id = 'delete-btn'>DELETE ALL</button>
     <ul id = 'link-list'>
     </ul>
